--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,9 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 } */
+
+@layer base {
+  li {
+    @apply p-1 hover:bg-gray-200 rounded-md cursor-pointer;
+  }
+}
